# atmega16a

./: config.cmake
cmake/: avr-arduino-toolchain.cmake
lib/dbg_util/: CMakeLists.txt  dbg_util.c  dbg_util.h
lib/lcd/: CMakeLists.txt
lib/spi/: CMakeLists.txt  spi.c  spi.h
lib/uart/: CMakeLists.txt  uart.c  uart.h
sketches/IR/: CMakeLists.txt  IR.cpp  README.md
sketches/IR2/: ir-decode-compatible.cpp  ir-decode.cpp
sketches/blink/: blink.cpp
sketches/esp8266wifi-tcp-client/: CMakeLists.txt
src/lcdex/: CMakeLists.txt  lcdex.c
src/sample/: CMakeLists.txt  serial.c
